--- a/views/complaintsdetails.ejs
+++ b/views/complaintsdetails.ejs
@@ -1,47 +1,65 @@
 <!--include header-->
 <%-include('include/_header')%>
-<!--\include header-->
+    <!--\include header-->
 
 
-<div class="container" style="margin-top: 30px; width: 50%; background-color: whitesmoke;" >
-    <h5 class="text-center display-6" style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;"><strong>Job Details</strong></h5>
-    <div style="border: 3px black solid; border-radius: 5px; padding: 10px;">
-        <!-- <% requests.forEach(function(request) { %> -->
+    <div class="container" style="margin-top: 30px; width: 50%; background-color: whitesmoke;">
+        <h5 class="text-center display-6"
+            style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;"><strong>Job
+                Details</strong></h5>
+        <div style="border: 3px black solid; border-radius: 5px; padding: 10px;">
+
             <div>
                 <label for="eventid"><strong>Job No: </strong></label>
-                <p contenteditable="false"><%= requests.jobID %></p>
+                <p>
+                    <%= selectedDoc.jobID %>
+                </p>
             </div>
             <div>
                 <label for="eventid"><strong>Name: </strong></label>
-                <p contenteditable="true"><%= requests.issuer %></p>
+                <p>
+                    <%= selectedDoc.issuer %>
+                </p>
             </div>
             <div>
                 <label for="eventid"><strong>D/B/U/B: </strong></label>
-                <p contenteditable="true"><%= requests.branch %></p>
+                <p>
+                    <%= selectedDoc.branch %>
+                </p>
             </div>
             <div>
                 <label for="eventid"><strong>Extension: </strong></label>
-                <p contenteditable="true"><%= requests.extension %></p>
+                <p>
+                    <%= selectedDoc.extension %>
+                </p>
             </div>
             <div>
                 <label for="eventid"><strong>Complaint: </strong></label>
-                <p contenteditable="true"><%= requests.issue %></p>
+                <p>
+                    <%= selectedDoc.issue %>
+                </p>
             </div>
             <div>
                 <label for="eventid"><strong>Comment: </strong></label>
-                <p contenteditable="true"><%= requests.comment %></p>
+                <p>
+                    <%= selectedDoc.comment %>
+                </p>
             </div>
             <div>
                 <label for="eventid"><strong>Date issued: </strong></label>
-                <p contenteditable="true"><%= requests.dateCreated %></p>
+                <p>
+                    <%= selectedDoc.formattedDateCreated %>
+                </p>
             </div>
             <div>
                 <label for="eventid"><strong>Time issued: </strong></label>
-                <p contenteditable="true">Agya Akwa @60</p>
+                <p>Agya Akwa @60</p>
             </div>
             <div>
                 <label for="eventid"><strong>Status: </strong></label>
-                <p contenteditable="true"><%= requests.status %>Today</p>
+                <p>
+                    <%= selectedDoc.status %>
+                </p>
             </div>
             <!-- <div>
                 <label for="eventid"><strong>Date completed: </strong></label>
@@ -62,17 +80,92 @@
             </div> -->
             <div class="mb-3">
                 <label for="collectors" class="form-label"><strong>Assigned to: </strong></label>
-                <textarea class="form-control" id="collectors" rows="3" placeholder="Enter assigned collectors' names"></textarea>
-              </div>
-        <!-- <% }) %> -->
-    </div>
-    <div>
-        <a href="bhallform.html" class="btn btn-primary btn-sm" role="button">Apply</a>
-        <a href="bhallform.html" class="btn btn-danger btn-sm" role="button">Cancel</a>
-    </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
- <!--include footer-->
- <%-include('include/_footer')%>
- <!--\include footer-->
+                <p>
+                    <%= selectedDoc.status %>
+                </p>
+                <p>
+                    <%= selectedDoc.status %>
+                </p>
+                <p>
+                    <%= selectedDoc.status %>
+                </p>
+                <p>
+                    <%= selectedDoc.status %>
+                </p>
+                <!-- <textarea class="form-control" id="collectors" rows="3" placeholder="Enter assigned collectors' names"></textarea> -->
+            </div>
+            <!-- Scrollable modal -->
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Launch demo modal
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-scrollable">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">IT Staff List</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <ol>
+                                <li>Coffee</li>
+                                <li>Tea</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                                <li>Milk</li>
+                              </ol>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div>
+            <a href="bhallform.html" class="btn btn-primary btn-sm" role="button">Apply</a>
+            <a href="bhallform.html" class="btn btn-danger btn-sm" role="button">Cancel</a>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+
+    <!--include footer-->
+    <%-include('include/_footer')%>
+        <!--\include footer-->
