--- a/views/complaintslist.ejs
+++ b/views/complaintslist.ejs
@@ -25,15 +25,14 @@
            <td><%= requests[i].branch %></td>
            <td><%= requests[i].issue %></td>
            <!-- <td><%= requests[i].comment %></td> -->
-           <td><%= requests[i].dateCreated %></td>
+           <td><%= requests[i].formattedDateCreated %></td>
            <td><%= requests[i].status %></td>
 
-           
 
            <td>
              <!-- <a href="requestform.ejs" class="btn btn-primary btn-sm" role="button">View</a> -->
              <!-- <button type="button" class="btn btn-danger btn-sm">Cancel</button> -->
-             <a class="btn btn-primary" href="details?id=<%= requests[i].jobID %>" role="button">Details</a>
+             <a class="btn btn-primary" href="details/?id=<%= requests[i]._id %>" role="button">Details</a>
 
 
            </td>
